add work and contact form

--- a/index.html
+++ b/index.html
@@ -185,6 +185,46 @@
         </div>
     </section>
 
+    <!-- WORK SECTION -->
+
+    <section class="work section" id="work">
+        <h2 class="section-title">Work</h2>
+
+        <div class="work__container bd-grid">
+            <div class="work__img">
+                <img src="assets/work1.png">
+            </div>
+
+            <div class="work__img">
+                <img src="assets/work2.png">
+            </div>
+
+            <div class="work__img">
+                <img src="assets/work3.png">
+            </div>
+        </div>
+    </section>
+
+    <!--CONTACT-->
+
+    <section class="contact section" id="contact"> 
+        <h2 class="section-title">Contact</h2>
+
+        <div class="contact__container bd-grid">
+            <form action="" class="contact__form">
+                <input type="text" placeholder="Name" class="contact__input">
+                <input type="mail" placeholder="Email" class="contact__input">
+                <textarea name="" id="" cols="0" rows="10" class="contact__input"></textarea>
+                <input type="button" value="say hello!" class="contact__button button">
+            </form>
+        </div>
+
+    <!--FOOTER-->
+    <footer class="footer">
+        
+    </footer>
+
+    </section>
 
 </main>
 
