add footer section

--- a/index.html
+++ b/index.html
@@ -221,15 +221,16 @@
 
     <!--FOOTER-->
     <footer class="footer">
-        
+        <p class="footer__title">Zahra</p>
+        <div class="footer__social">
+            <a href="#" class="footer__icon"><i class='bx bxl-linkedin' ></i></a>
+            <a href="#" class="footer__icon"><i class='bx bxl-twitter' ></i></a>
+            <a href="#" class="footer__icon"><i class='bx bxl-github' ></i></a>
+        </div>
+        <p>&#169; New York 2020 — Zahra Khan</p>
     </footer>
-
     </section>
-
 </main>
-
-
-
 
 
 <script src="https://unpkg.com/scrollreveal"></script>
