add responsive styling

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>zahra</title>
 </head>
 <body>
-<header class="l-header">
+<header class="primary-header">
     <nav class="nav bd-grid">
         <div>
             <a href="#" class="nav__logo">Zahra</a>
@@ -24,11 +24,12 @@
                 <li class="nav__item"><a href="#work" class="nav__link">Work</a></li>
                 <li class="nav__item"><a href="#contact" class="nav__link">Contact</a></li>
             </ul>
+        </div>
 
             <div class="nav__toggle" id="nav-toggle">
                 <i class="bx bx-menu"></i>
             </div>
-        </div>
+        
     </nav>
 </header>
 
