add and style skills section

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                 <!--HTML5-->
                 <div class="skills__data">
                     <div class="skills__names">
-                        <img class="skills-img" src="assets/html.svg">
+                        <img class="skills__icon" src="assets/html.svg">
                         <span class="skills__name">HTML5</span>
                     </div>
                 </div>
@@ -90,7 +90,7 @@
                 <!--CSS3-->
                 <div class="skills__data">
                     <div class="skills__names">
-                        <img class="skills-img" src="assets/css3.svg">
+                        <img class="skills__icon" src="assets/css3.svg">
                         <span class="skills__name">CSS3</span>
                     </div>
                 </div>
@@ -98,7 +98,7 @@
                 <!--SASS-->
                 <div class="skills__data">
                     <div class="skills__names">
-                        <img class="skills-img" src="assets/sass.svg">
+                        <img class="skills__icon" src="assets/sass.svg">
                         <span class="skills__name">SASS</span>
                     </div>
                 </div>
@@ -106,79 +106,79 @@
                 <!--JAVASCRIPT-->
                 <div class="skills__data">
                     <div class="skills__names">
-                        <img class="skills-img" src="assets/javascript.svg">
-                        <span class="skills__name">JAVASCRIPT</span>
+                        <img class="skills__icon" src="assets/javascript.svg">
+                        <span class="skills__name">JavaScript</span>
                     </div>
                 </div>
 
                 <div class="skills__data">
                     <div class="skills__names">
-                        <img class="skills-img" src="assets/nodejs.svg">
-                        <span class="skills__name">NODEJS</span>
+                        <img class="skills__icon" src="assets/nodejs.svg">
+                        <span class="skills__name">Node.js</span>
                     </div>
                 </div>
 
                 <!-- REACT -->
                 <div class="skills__data">
                     <div class="skills__names">
-                        <img class="skills-img" src="assets/react.svg">
-                        <span class="skills__name">REACT</span>
+                        <img class="skills__icon" src="assets/react.svg">
+                        <span class="skills__name">React</span>
                     </div>
                 </div>
 
                 <!--STYLED COMPONENTS-->
                 <div class="skills__data">
                     <div class="skills__names">
-                        <img class="skills-img" src="assets/styled-components.svg">
-                        <span class="skills__name">STYLED-COMPONENTS</span>
+                        <img class="skills__icon" src="assets/styled-components.svg">
+                        <span class="skills__name">Styled Components</span>
                     </div>
                 </div>
 
                 <!--RUBY-->
                 <div class="skills__data">
                     <div class="skills__names">
-                        <img class="skills-img" src="assets/ruby.svg">
-                        <span class="skills__name">RUBY</span>
+                        <img class="skills__icon" src="assets/ruby.svg">
+                        <span class="skills__name">Ruby</span>
                     </div>
                 </div>
 
                 <!--RAILS-->
                 <div class="skills__data">
                     <div class="skills__names">
-                        <img class="skills-img" src="assets/rails.svg">
-                        <span class="skills__name">RAILS</span>
+                        <img class="skills__icon" src="assets/rails.svg">
+                        <span class="skills__name">Rails</span>
                     </div>
                 </div>
 
                 <!--POSTGRESQL-->
                 <div class="skills__data">
                     <div class="skills__names">
-                        <img class="skills-img" src="assets/postgresql.svg">
-                        <span class="skills__name">POSTGRESQL</span>
+                        <img class="skills__icon" src="assets/postgresql.svg">
+                        <span class="skills__name">PostgreSQL</span>
                     </div>
                 </div>
 
                 <!--EXPRESS-->
                 <div class="skills__data">
                     <div class="skills__names">
-                        <img class="skills-img" src="assets/express.svg">
-                        <span class="skills__name">EXPRESS</span>
+                        <img class="skills__icon" src="assets/express.svg">
+                        <span class="skills__name">Express.js</span>
                     </div>
                 </div>
 
                 <!--MongoDB-->
                 <div class="skills__data">
                     <div class="skills__names">
-                        <img class="skills-img" src="assets/mongodb.svg">
-                        <span class="skills__name">MONGODB</span>
+                        <img class="skills__icon" src="assets/mongodb.svg">
+                        <span class="skills__name">MongoDB</span>
                     </div>
                 </div>
 
                 <!--Heroku-->
                 <div class="skills__data">
                     <div class="skills__names">
-                        <img class="skills-img" src="assets/heroku.svg">
-                        <span class="skills__name">HEROKU</span>
+                        <img class="skills__icon" src="assets/heroku.svg">
+                        <span class="skills__name">Heroku</span>
                     </div>
                 </div>
                
