add home and nav media queries

--- a/index.html
+++ b/index.html
@@ -224,9 +224,9 @@
     <footer class="footer">
         <p class="footer__title">Zahra</p>
         <div class="footer__social">
-            <a href="#" class="footer__icon"><i class='bx bxl-linkedin' ></i></a>
-            <a href="#" class="footer__icon"><i class='bx bxl-twitter' ></i></a>
-            <a href="#" class="footer__icon"><i class='bx bxl-github' ></i></a>
+            <a href="https://www.linkedin.com/in/zahra-khan-01/" class="footer__icon"><i class='bx bxl-linkedin' ></i></a>
+            <a href="https://twitter.com/zahrakhadijha" class="footer__icon"><i class='bx bxl-twitter' ></i></a>
+            <a href="https://github.com/zahrakhadijha" class="footer__icon"><i class='bx bxl-github' ></i></a>
         </div>
         <p>&#169; New York 2020 — Zahra Khan</p>
     </footer>
