--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
     </div>
 
     <div class="home__social">
-        <a href="" class="home__social-icon"><i class='bx bxl-linkedin'></i></a>
-        <a href="" class="home__social-icon"><i class='bx bxl-twitter' ></i></a>
-        <a href="" class="home__social-icon"><i class='bx bxl-github' ></i></a>
+        <a href="https://www.linkedin.com/in/zahra-khan-01/" class="home__social-icon"><i class='bx bxl-linkedin'></i></a>
+        <a href="https://twitter.com/zahrakhadijha" class="home__social-icon"><i class='bx bxl-twitter' ></i></a>
+        <a href="https://github.com/zahrakhadijha" class="home__social-icon"><i class='bx bxl-github' ></i></a>
     </div>
 
     <div class="home__img">
