add work links and details

--- a/index.html
+++ b/index.html
@@ -192,16 +192,29 @@
         <h2 class="section-title">Work</h2>
 
         <div class="work__container bd-grid">
+           
             <div class="work__img">
                 <img src="assets/work1.png">
+
+                <div class="work__link">
+                    <a href="https://spoon-fork-lavender.netlify.app/" class="work__link-name"><span class="work__link-title">Spook Fork Lavender</span> <br> View Project</a>
+                </div>
             </div>
 
             <div class="work__img">
                 <img src="assets/work2.png">
+
+                <div class="work__link">
+                    <a href="https://waste-watchers.netlify.app/" class="work__link-name"><span class="work__link-title">Waste Watchers</span> <br> View Project</a>
+                </div>
             </div>
 
             <div class="work__img">
                 <img src="assets/work3.png">
+                
+                <div class="work__link">
+                    <a href="http://house-of-plants.surge.sh/" class="work__link-name"><span class="work__link-title">House Of Plants</span> <br> View Project</a>
+                </div>
             </div>
         </div>
     </section>
