--- a/index.html
+++ b/index.html
@@ -66,7 +66,10 @@
 
         <div>
             <h2 class="about__subtitle">I'm Zahra</h2>
-            <p class="about__text">Zahra is a quiet yet witty perfectionist, designer, developer, illustrator & marketer from New York City. With interdisciplinary experience in both Full-Stack Development and Digital Marketing, she is able to use storytelling to develop interactive web applications that help organizations increase their digital presence.</p>
+            <p class="about__text">I'm a highly curious and creative software engineer with four years of experience in digital marketing. As a quick learner with a passion for creating, I'm constantly looking for the next project to throw myself into.
+            
+                <br><br>
+            With a background in design and marketing, I'm able to bring a strong visual focus to the user experience and use storytelling to develop interactive web applications that help organizations increase their digital presence. I strive to work in a highly technical environment that challenges my diverse skillset and pushes me to learn and grow further.</p>
         </div>
     </div>
     </section>
