--- a/index.html
+++ b/index.html
@@ -171,6 +171,7 @@
         <div class="footer__social">
             <a href="https://www.linkedin.com/in/zahra-khan-01/" class="footer__icon"><i class='bx bxl-linkedin' ></i></a>
             <a href="https://twitter.com/zahrakhadijha" class="footer__icon"><i class='bx bxl-twitter' ></i></a>
+            <a href="https://www.instagram.com/artsy_zahra/" class="footer__icon"><i class='bx bxl-instagram' ></i></a>
             <a href="https://github.com/zahrakhadijha" class="footer__icon"><i class='bx bxl-github' ></i></a>
         </div>
         <p>&#169; New York 2020 — Zahra Khan</p>
