update skills section

--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@
                 <span class="skills__name">Github</span>
                 <span class="skills__name">Figma</span>
                 <span class="skills__name">Wordpress</span>
+                <span class="skills__name">Procreate</span>
                 <span class="skills__name">Lightroom</span>
                 <span class="skills__name">Photoshop</span>
                 <span class="skills__name">InDesign</span>
