add codepen social icon

--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
         <a href="https://www.linkedin.com/in/zahra-khan-01/" class="home__social-icon"><i class='bx bxl-linkedin'></i></a>
         <a href="https://twitter.com/zahrakhadijha" class="home__social-icon"><i class='bx bxl-twitter' ></i></a>
         <a href="https://github.com/zahrakhadijha" class="home__social-icon"><i class='bx bxl-github' ></i></a>
+        <a href="https://codepen.io/zahrakhadijha" class="home__social-icon"><i class='bx bxl-codepen'></i></a>
     </div>
 
     <div class="home__img">
@@ -171,9 +172,10 @@
         <p class="footer__title">Zahra</p>
         <div class="footer__social">
             <a href="https://www.linkedin.com/in/zahra-khan-01/" class="footer__icon"><i class='bx bxl-linkedin' ></i></a>
+            <a href="https://codepen.io/zahrakhadijha" class="footer__icon"><i class='bx bxl-codepen'></i></a>
             <a href="https://twitter.com/zahrakhadijha" class="footer__icon"><i class='bx bxl-twitter' ></i></a>
-            <a href="https://www.instagram.com/artsy_zahra/" class="footer__icon"><i class='bx bxl-instagram' ></i></a>
             <a href="https://github.com/zahrakhadijha" class="footer__icon"><i class='bx bxl-github' ></i></a>
+
         </div>
         <p>&#169; New York 2020 — Zahra Khan</p>
     </footer>
