--- a/index.html
+++ b/index.html
@@ -129,11 +129,11 @@
             <div class="project__content">
                 <a href="#"><img src="/assets/work1.png" alt="project-image" class="project__img"></a>
                 <div class="project__data">
-                    <a href="#">
+                    <a href="https://flick-app.netlify.app/">
                         <h2 class="project__title">Flick</h2>
                     </a>
                     <span class="project__subtitle">A movie seat web and mobile application.</span>
-                    <a href="#" class="button button-link">View on Github</a>
+                    <a href="https://github.com/zahrakhadijha/flick" class="button button-link">View on Github</a>
                 </div>
                 <div class="project__language">
                     <img class="project__language-img" src="assets/html.svg">
@@ -145,11 +145,11 @@
             <div class="project__content">
                 <a href="#"><img src="/assets/work2.png" alt="project-image" class="project__img"></a>
                 <div class="project__data">
-                    <a href="#">
+                    <a href="http://house-of-plants.surge.sh/">
                         <h2 class="project__title">House of Plants</h2>
                     </a>
                     <span class="project__subtitle">A web application that helps track the care of your plants.</span>
-                    <a href="#" class="button button-link">View on GitHub</a>
+                    <a href="https://github.com/zahrakhadijha/house-of-plants" class="button button-link">View on GitHub</a>
                 </div>
 
                 <div class="project__language">
@@ -165,11 +165,11 @@
             <div class="project__content">
                 <a href="#"><img src="/assets/work3.png" alt="project-image" class="project__img"></a>
                 <div class="project__data">
-                    <a href="#">
+                    <a href="https://waste-watchers.netlify.app/">
                         <h2 class="project__title">Waste Watchers</h2>
                     </a>
                     <span class="project__subtitle">A web and mobile application that provides a solution to keep track of what and how often users recycle with a point system in place. Built in collaboration with the UX Team.</span>
-                    <a href="#" class="button button-link">View on GitHub</a>
+                    <a href="https://github.com/indianakuffer/waste-watchers" class="button button-link">View on GitHub</a>
                 </div>
             
                 <div class="project__language">
