--- a/index.html
+++ b/index.html
@@ -119,11 +119,11 @@
     <section class="project section" id="project">
         <h2 class="section-title">Projects</h2>
 
-        <div class="project__nav">
+        <!-- <div class="project__nav">
             <span class="project__item">All</span>
             <span class="project__item">Web Development</span>
             <span class="project__item">App</span>
-        </div>
+        </div> -->
 
         <div class="project__container bd-grid">
             <div class="project__content">
