add links to project images

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 
         <div class="project__container bd-grid">
             <div class="project__content">
-                <a href="#"><img src="/assets/work1.png" alt="project-image" class="project__img"></a>
+                <a href="https://flick-app.netlify.app/"><img src="/assets/work1.png" alt="project-image" class="project__img"></a>
                 <div class="project__data">
                     <a href="https://flick-app.netlify.app/">
                         <h2 class="project__title">Flick</h2>
@@ -135,15 +135,10 @@
                     <span class="project__subtitle">A movie seat web and mobile application.</span>
                     <a href="https://github.com/zahrakhadijha/flick" class="button button-link">View on Github</a>
                 </div>
-                <div class="project__language">
-                    <img class="project__language-img" src="assets/html.svg">
-                    <img class="project__language-img" src="assets/css3.svg">
-                    <img class="project__language-img" src="assets/javascript.svg">
-                </div>
             </div>
 
             <div class="project__content">
-                <a href="#"><img src="/assets/work2.png" alt="project-image" class="project__img"></a>
+                <a href="http://house-of-plants.surge.sh/"><img src="/assets/work2.png" alt="project-image" class="project__img"></a>
                 <div class="project__data">
                     <a href="http://house-of-plants.surge.sh/">
                         <h2 class="project__title">House of Plants</h2>
@@ -151,34 +146,16 @@
                     <span class="project__subtitle">A web application that helps track the care of your plants.</span>
                     <a href="https://github.com/zahrakhadijha/house-of-plants" class="button button-link">View on GitHub</a>
                 </div>
-
-                <div class="project__language">
-                    <img class="project__language-img" src="assets/react.svg">
-                    <img class="project__language-img" src="assets/nodejs.svg">
-                    <img class="project__language-img" src="assets/styled-components.svg">
-                    <img class="project__language-img" src="assets/ruby.svg">
-                    <img class="project__language-img" src="assets/rails.svg">
-                    <img class="project__language-img" src="assets/postgresql.svg">
-                </div>
             </div>
 
             <div class="project__content">
-                <a href="#"><img src="/assets/work3.png" alt="project-image" class="project__img"></a>
+                <a href="https://waste-watchers.netlify.app/"><img src="/assets/work3.png" alt="project-image" class="project__img"></a>
                 <div class="project__data">
                     <a href="https://waste-watchers.netlify.app/">
                         <h2 class="project__title">Waste Watchers</h2>
                     </a>
                     <span class="project__subtitle">A web and mobile application that provides a solution to keep track of what and how often users recycle with a point system in place. Built in collaboration with the UX Team.</span>
                     <a href="https://github.com/indianakuffer/waste-watchers" class="button button-link">View on GitHub</a>
-                </div>
-            
-                <div class="project__language">
-                    <img class="project__language-img" src="assets/react.svg">
-                    <img class="project__language-img" src="assets/nodejs.svg">
-                    <img class="project__language-img" src="assets/styled-components.svg">
-                    <img class="project__language-img" src="assets/express.svg">
-                    <img class="project__language-img" src="assets/mongodb.svg">
-                    <img class="project__language-img" src="assets/d3js.svg">
                 </div>
             </div>
         </div>
