update project cards

--- a/index.html
+++ b/index.html
@@ -116,16 +116,11 @@
 
     <!-- PROJECT SECTION -->
 
-    <section class="project section" id="project">
+    <section class="project section bd-container" id="project">
         <h2 class="section-title">Projects</h2>
 
-        <!-- <div class="project__nav">
-            <span class="project__item">All</span>
-            <span class="project__item">Web Development</span>
-            <span class="project__item">App</span>
-        </div> -->
-
         <div class="project__container bd-grid">
+            <!-- PROJECT 1 -->
             <div class="project__content">
                 <a href="https://flick-app.netlify.app/"><img src="/assets/work1.png" alt="project-image" class="project__img"></a>
                 <div class="project__data">
@@ -137,6 +132,7 @@
                 </div>
             </div>
 
+            <!-- PROJECT 2 -->
             <div class="project__content">
                 <a href="http://house-of-plants.surge.sh/"><img src="/assets/work2.png" alt="project-image" class="project__img"></a>
                 <div class="project__data">
@@ -148,6 +144,7 @@
                 </div>
             </div>
 
+            <!-- PROJECT 3 -->
             <div class="project__content">
                 <a href="https://waste-watchers.netlify.app/"><img src="/assets/work3.png" alt="project-image" class="project__img"></a>
                 <div class="project__data">
