add illustrations section to nav

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
                 <li class="nav__item"><a href="#about" class="nav__link">About</a></li>
                 <li class="nav__item"><a href="#skills" class="nav__link">Skills</a></li>
                 <li class="nav__item"><a href="#project" class="nav__link">Projects</a></li>
+                <li class="nav__item"><a href="#illustration" class="nav__link">Illustrations</a></li>
                 <li class="nav__item"><a href="#contact" class="nav__link">Contact</a></li>
             </ul>
         </div>
@@ -157,6 +158,10 @@
             </div>
         </div>
     </section>
+
+    <!-- ILLUSTRATIONS SECTION -->
+
+    
 
     <!--CONTACT-->
 
