--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     </div>
 
     <div class="home__img">
-        <img src="assets/zahra-profile-img.png">
+        <img src="assets/headshots/zahra-profile-img.png">
     </div>
     </section>
 
@@ -63,7 +63,7 @@
 
     <div class="about__container bd-grid">
         <div class="about__img">
-            <img src="assets/zahra-headshot.png" alt="headshot">
+            <img src="assets/headshots/zahra-headshot.png" alt="headshot">
         </div>
 
         <div>
@@ -110,20 +110,20 @@
             </div>
 
             <div class="skills__img">
-                <img src="assets/creative.jpg" alt="skills-image">
+                <img src="assets/misc./creative.jpg" alt="skills-image">
             </div>
         </div>
     </section>
 
     <!-- PROJECT SECTION -->
 
-    <section class="project section bd-container" id="project">
+    <section class="project section" id="project">
         <h2 class="section-title">Projects</h2>
 
         <div class="project__container bd-grid">
             <!-- PROJECT 1 -->
             <div class="project__content">
-                <a href="https://flick-app.netlify.app/"><img src="/assets/work1.png" alt="project-image" class="project__img"></a>
+                <a href="https://flick-app.netlify.app/"><img src="/assets/work-img/work1.png" alt="project-image" class="project__img"></a>
                 <div class="project__data">
                     <a href="https://flick-app.netlify.app/">
                         <h2 class="project__title">Flick</h2>
@@ -135,7 +135,7 @@
 
             <!-- PROJECT 2 -->
             <div class="project__content">
-                <a href="http://house-of-plants.surge.sh/"><img src="/assets/work2.png" alt="project-image" class="project__img"></a>
+                <a href="http://house-of-plants.surge.sh/"><img src="/assets/work-img/work2.png" alt="project-image" class="project__img"></a>
                 <div class="project__data">
                     <a href="http://house-of-plants.surge.sh/">
                         <h2 class="project__title">House of Plants</h2>
@@ -147,7 +147,7 @@
 
             <!-- PROJECT 3 -->
             <div class="project__content">
-                <a href="https://waste-watchers.netlify.app/"><img src="/assets/work3.png" alt="project-image" class="project__img"></a>
+                <a href="https://waste-watchers.netlify.app/"><img src="/assets/work-img/work3.png" alt="project-image" class="project__img"></a>
                 <div class="project__data">
                     <a href="https://waste-watchers.netlify.app/">
                         <h2 class="project__title">Waste Watchers</h2>
@@ -161,7 +161,15 @@
 
     <!-- ILLUSTRATIONS SECTION -->
 
-    
+    <section class="illustration section" id="illustration">
+        <h2 class="section-title">Illustrations</h2>
+
+        <div class="illustration__container bd-grid">
+            <div class="illustration__data">
+                <a href="#"><img src="#" alt="" class="illustration__img"></a>
+            </div>
+        </div>
+    </section>
 
     <!--CONTACT-->
 
