[CREATE] In progess web page

--- a/index.html
+++ b/index.html
@@ -1,384 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link rel="stylesheet" href="css/style.css" />
-		<link
-			rel="shortcut icon"
-			type="image/png"
-			href="assets/icons/black-heart.png"
-		/>
-		<link
-			href="https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css"
-			rel="stylesheet"
-		/>
-		<link
-			href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;1,100;1,200&display=swap"
-			rel="stylesheet"
-		/>
-		<title>zahra</title>
-	</head>
-	<body>
-		<header class="primary-header">
-			<nav class="nav bd-grid">
-				<div>
-					<a href="#" class="nav__logo">Zahra</a>
-				</div>
-
-				<div class="nav__menu" id="nav-menu">
-					<ul class="nav__list">
-						<li class="nav__item">
-							<a href="#home" class="nav__link active">Home</a>
-						</li>
-						<li class="nav__item">
-							<a href="#about" class="nav__link">About</a>
-						</li>
-						<li class="nav__item">
-							<a href="#skills" class="nav__link">Skills</a>
-						</li>
-						<li class="nav__item">
-							<a href="#project" class="nav__link">Projects</a>
-						</li>
-						<li class="nav__item">
-							<a href="#illustration" class="nav__link">Illustrations</a>
-						</li>
-						<li class="nav__item">
-							<a href="#contact" class="nav__link">Contact</a>
-						</li>
-					</ul>
-				</div>
-
-				<div class="nav__toggle" id="nav-toggle">
-					<i class="bx bx-menu"></i>
-				</div>
-			</nav>
-		</header>
-
-		<main class="l-main">
-			<!-- HOME -->
-			<section class="home bd-grid" id="home">
-				<div class="home__data">
-					<h1 class="home__title">
-						Hi, <br />
-						I'm <span class="home__title-color">Zahra</span><br />
-						Software Engineer
-					</h1>
-					<a
-						href="mailto:zahra.khan@icloud.com?"
-						subject="hi, there!"
-						class="button"
-						>Contact</a
-					>
-				</div>
-
-				<div class="home__social">
-					<a
-						href="https://www.linkedin.com/in/zahra-khan-01/"
-						class="home__social-icon"
-						><i class="bx bxl-linkedin"></i
-					></a>
-					<a href="https://twitter.com/zahrakhadijha" class="home__social-icon"
-						><i class="bx bxl-twitter"></i
-					></a>
-					<a href="https://github.com/zahrakhadijha" class="home__social-icon"
-						><i class="bx bxl-github"></i
-					></a>
-					<a href="https://codepen.io/zahrakhadijha" class="home__social-icon"
-						><i class="bx bxl-codepen"></i
-					></a>
-				</div>
-
-				<div class="home__img">
-					<img src="assets/headshots/zahra-profile-img.png" />
-				</div>
-			</section>
-
-			<!-- ABOUT -->
-			<section class="about section" id="about">
-				<h2 class="section-title">About</h2>
-
-				<div class="about__container bd-grid">
-					<div class="about__img">
-						<img src="assets/headshots/zahra-headshot.png" alt="headshot" />
-					</div>
-
-					<div>
-						<h2 class="about__subtitle">Hi, I'm Zahra!</h2>
-						<p class="about__text">
-							I'm a highly curious and passionate software engineer with four
-							years of experience in digital marketing. As a quick learner with
-							an enthusiasm for creating, I'm constantly looking for the next
-							project to throw myself into.
-
-							<br /><br />
-							With interdisciplinary experience both in digital design and
-							marketing, I'm able to bring a strong visual focus to the user
-							experience, utilizing storytelling to develop interactive web
-							applications that help organizations increase their digital
-							presence. I strive to work in a highly technical environment that
-							challenges my diverse skillset and pushes me to learn and grow
-							further.
-							<br />
-							<br />
-							When I'm not working, I like to challenge myself athletically,
-							surround myself in art and nature, and pretend I'm on a cooking
-							show.
-							<br />
-							<br />
-							Currently, I'm seeking a full-time Front End Developer position.
-							Please feel free to send me an
-							<a
-								href="mailto:zahra.khan@icloud.com?"
-								subject="hi, there!"
-								class="about__email-link"
-								>email</a
-							>
-							if you'd like to connect, collaborate, or just chat. I'm always
-							happy to meet new people!
-						</p>
-					</div>
-				</div>
-			</section>
-
-			<!-- SKILLS-->
-			<section class="skills section" id="skills">
-				<h2 class="section-title">Skills</h2>
-
-				<div class="skills__container bd-grid">
-					<div class="skills__box">
-						<h3 class="skills__subtitle">Frontend</h3>
-						<span class="skills__name">HTML5</span>
-						<span class="skills__name">CSS3</span>
-						<span class="skills__name">SASS/SCSS</span>
-						<span class="skills__name">Javascript</span>
-						<span class="skills__name">React</span>
-						<span class="skills__name">Styled-Components</span>
-
-						<h3 class="skills__subtitle">Backend</h3>
-						<span class="skills__name">PostgreSQL</span>
-						<span class="skills__name">NodeJS</span>
-						<span class="skills__name">Express</span>
-						<span class="skills__name">Heroku</span>
-						<span class="skills__name">MongoDB</span>
-						<span class="skills__name">Ruby</span>
-						<span class="skills__name">Rails</span>
-
-						<h3 class="skills__subtitle">Misc.</h3>
-						<span class="skills__name">Github</span>
-						<span class="skills__name">Figma</span>
-						<span class="skills__name">Wordpress</span>
-						<span class="skills__name">Procreate</span>
-						<span class="skills__name">Lightroom</span>
-						<span class="skills__name">Photoshop</span>
-						<span class="skills__name">InDesign</span>
-					</div>
-
-					<div class="skills__img">
-						<img src="assets/misc./creative.jpg" alt="skills-image" />
-					</div>
-				</div>
-			</section>
-
-			<!-- PROJECT SECTION -->
-
-			<section class="project section" id="project">
-				<h2 class="section-title">Projects</h2>
-
-				<div class="project__container bd-grid">
-					<!-- PROJECT 1 -->
-					<div class="project__content">
-						<a href="https://flick-app.netlify.app/"
-							><img
-								src="/assets/work-img/work1.png"
-								alt="project-image"
-								class="project__img"
-						/></a>
-						<div class="project__data">
-							<a href="https://flick-app.netlify.app/">
-								<h2 class="project__title">Flick</h2>
-							</a>
-							<span class="project__subtitle"
-								>A movie seat web and mobile application.</span
-							>
-							<a
-								href="https://github.com/zahrakhadijha/flick"
-								class="button button-link"
-								>View on Github</a
-							>
-						</div>
-					</div>
-
-					<!-- PROJECT 2 -->
-					<div class="project__content">
-						<a href="http://house-of-plants.surge.sh/"
-							><img
-								src="/assets/work-img/work2.png"
-								alt="project-image"
-								class="project__img"
-						/></a>
-						<div class="project__data">
-							<a href="http://house-of-plants.surge.sh/">
-								<h2 class="project__title">House of Plants</h2>
-							</a>
-							<span class="project__subtitle"
-								>A web application that helps track the care of your
-								plants.</span
-							>
-							<a
-								href="https://github.com/zahrakhadijha/house-of-plants"
-								class="button button-link"
-								>View on GitHub</a
-							>
-						</div>
-					</div>
-
-					<!-- PROJECT 3 -->
-					<div class="project__content">
-						<a href="https://waste-watchers.netlify.app/"
-							><img
-								src="/assets/work-img/work3.png"
-								alt="project-image"
-								class="project__img"
-						/></a>
-						<div class="project__data">
-							<a href="https://waste-watchers.netlify.app/">
-								<h2 class="project__title">Waste Watchers</h2>
-							</a>
-							<span class="project__subtitle"
-								>A web and mobile application that provides a solution to keep
-								track of what and how often users recycle with a point system in
-								place. Built in collaboration with the UX Team.</span
-							>
-							<a
-								href="https://github.com/indianakuffer/waste-watchers"
-								class="button button-link"
-								>View on GitHub</a
-							>
-						</div>
-					</div>
-				</div>
-			</section>
-
-			<!-- ILLUSTRATIONS SECTION -->
-
-			<section class="illustration section" id="illustration">
-				<h2 class="section-title">Illustrations</h2>
-
-				<div class="illustration__container bd-grid">
-					<div class="illustration__data">
-						<img
-							src="assets/illustrations/illustration1.png"
-							alt=""
-							class="illustration__img"
-						/>
-					</div>
-					<div class="illustration__data">
-						<img
-							src="assets/illustrations/illustration2.png"
-							alt=""
-							class="illustration__img"
-						/>
-					</div>
-					<div class="illustration__data">
-						<img
-							src="assets/illustrations/illustration3.png"
-							alt=""
-							class="illustration__img"
-						/>
-					</div>
-					<div class="illustration__data">
-						<img
-							src="assets/illustrations/illustration4.png"
-							alt=""
-							class="illustration__img"
-						/>
-					</div>
-					<div class="illustration__data">
-						<img
-							src="assets/illustrations/illustration5.png"
-							alt=""
-							class="illustration__img"
-						/>
-					</div>
-					<div class="illustration__data">
-						<img
-							src="assets/illustrations/illustration6.png"
-							alt=""
-							class="illustration__img"
-						/>
-					</div>
-
-					<a
-						href="https://www.instagram.com/zahranewyork/"
-						class="button button-link"
-						>View More</a
-					>
-				</div>
-			</section>
-
-			<!--CONTACT-->
-
-			<section class="contact section" id="contact">
-				<h2 class="section-title">Contact</h2>
-
-				<div class="contact__container bd-grid">
-					<form action="POST" data-netlify="true" class="contact__form">
-						<input
-							type="text"
-							name="name"
-							id="name"
-							placeholder="Name"
-							class="contact__input"
-						/>
-						<input
-							type="mail"
-							name="email"
-							id="email"
-							placeholder="Email"
-							class="contact__input"
-						/>
-						<textarea
-							name="message"
-							id="message"
-							id=""
-							cols="0"
-							rows="10"
-							class="contact__input"
-						></textarea>
-						<input
-							type="submit"
-							value="Say Hello!"
-							class="contact__button button"
-						/>
-					</form>
-				</div>
-			</section>
-        </main>
-        
-		<!--FOOTER-->
-		<footer class="footer">
-			<p class="footer__title">Zahra</p>
-			<div class="footer__social">
-				<a
-					href="https://www.linkedin.com/in/zahra-khan-01/"
-					class="footer__icon"
-					><i class="bx bxl-linkedin"></i
-				></a>
-				<a href="https://codepen.io/zahrakhadijha" class="footer__icon"
-					><i class="bx bxl-codepen"></i
-				></a>
-				<a href="https://twitter.com/zahrakhadijha" class="footer__icon"
-					><i class="bx bxl-twitter"></i
-				></a>
-				<a href="https://github.com/zahrakhadijha" class="footer__icon"
-					><i class="bx bxl-github"></i
-				></a>
-			</div>
-			<p>&#169; New York 2020 — Zahra Khan</p>
-		</footer>
-
-		<script src="https://unpkg.com/scrollreveal"></script>
-		<script src="/js/main.js"></script>
-	</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles.css" />
+    <link
+      href="https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css"
+      rel="stylesheet"
+    />
+    <title>byzahra</title>
+  </head>
+  <body>
+    <h1>portfolio in progress.</h1>
+    <p>but we can still connect!</p>
+    <div class="home__social">
+      <a
+        href="https://www.linkedin.com/in/zahra-khan-01/"
+        class="home__social-icon"
+        ><i class="bx bxl-linkedin"></i
+      ></a>
+      <a href="https://twitter.com/zahrakhadijha" class="home__social-icon"
+        ><i class="bx bxl-twitter"></i
+      ></a>
+      <a href="https://github.com/zahrakhadijha" class="home__social-icon"
+        ><i class="bx bxl-github"></i
+      ></a>
+      <a href="https://codepen.io/zahrakhadijha" class="home__social-icon"
+        ><i class="bx bxl-codepen"></i
+      ></a>
+      <a href="https://dev.to/zahrakhadijha" class="home__social-icon"
+        ><i class="bx bxl-dev-to"></i
+      ></a>
+    </div>
+    <img class="smile-img" src="./assets/smile-regular.svg" />
+  </body>
 </html>
