[ADD] img link for social sharing

--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta property="og:title" content="Zahra's Portfolio" />
+    <meta property="og:type" content="portfolio" />
+    <meta property="og:image" content="https://i.imgur.com/xbm9ftC.png"/>
+    <meta property="og:url" content="https://zahrakhadijha.com/" />
     <link rel="stylesheet" href="styles.css" />
     <link
       href="https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css"
