--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta property="og:title" content="Zahra's Portfolio" />
-    <meta property="og:type" content="portfolio" />
+    <meta property="og:type" content="website" />
     <meta property="og:image" content="https://i.imgur.com/xbm9ftC.png"/>
     <meta property="og:url" content="https://zahrakhadijha.com/" />
+    <meta name="twitter:image" content="https://i.imgur.com/xbm9ftC.png" />
     <link rel="stylesheet" href="styles.css" />
     <link
       href="https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css"
